--- a/css/login.css
+++ b/css/login.css
@@ -12,16 +12,15 @@ h1{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 2.5%;
     letter-spacing: 0.2rem;
+    background-color: #1d1d1d;
 }
 
-#block{
-    display: block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50% , -50%);
+#signin{
+    display: none;
+    align-items: center;
+    justify-items: center;
+    margin: 15%;
 }
 #form{
     display: flex;
@@ -36,8 +35,8 @@ h1{
     max-height: 31.25em;
     border-radius: 20px;
     z-index: 0;
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
 }
 #form::before {
     content: "";
@@ -50,7 +49,7 @@ h1{
     border-radius: 10px; 
     box-sizing: border-box;
     z-index: -1;
-    animation: snakeEffect 1.5s linear infinite;
+    animation: snakeEffect 5s linear infinite;
 }
 #user-form-group{
     display: flex;
@@ -70,7 +69,7 @@ h1{
 }
 #user-form-group input{
     flex: 1;
-    width: 70%;
+    width: 50%;
     height: 20%;
     padding: 1%;
     border: 2px solid #1d1d1d;
@@ -97,6 +96,58 @@ h1{
 }
 
 #buttons-form-group:hover input{
+    opacity: 0.75;
+    background-size: cover;
+    border-radius: 15px;
+}
+
+#registrer{
+    display: block;
+    align-items: center;
+    justify-items: center;
+    margin-top: 2.5%;
+}
+
+#registrerform{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 1%;
+    width: 80%;
+    height: 80%;
+    box-sizing: border-box;
+    border: 2px dashed transparent;
+    border-radius: 20px;
+    z-index: 0;
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+}
+
+#registrerform::before {
+    content: "";
+    position: absolute;
+    top: -2px; 
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    border: 2px dashed #ffffff; 
+    border-radius: 10px; 
+    box-sizing: border-box;
+    z-index: -1;
+    animation: snakeEffect 5s linear infinite;
+}
+
+#buttons-signup-group input{
+    width: 7%;
+    height: 15%;
+    font-weight: bolder;
+    border: 2px solid white;
+    z-index:1;
+    transition: border-radius 0.5s cubic-bezier(0.1, 0.7, 1.0, 0.1);
+    background-color: transparent;
+    color: #fff;
+}
+#buttons-signup-group:hover input{
     opacity: 0.75;
     background-size: cover;
     border-radius: 15px;
