--- a/Web full stack (NASA)/css/style.css
+++ b/Web full stack (NASA)/css/style.css
@@ -3,31 +3,20 @@ body {
     margin: 5%;
     font-family: "Source Sans Pro", sans-serif;
     color: black;
-    background-image: url("../images/cosmos-1853491.jpg");
+    background-image: url("../images/fondo4.jpg");
     background-size: cover;
+    display: grid;
+    min-height: 100dvh;
+    grid-template-rows: auto 1fr auto;
 }
 
 h1, h2, h3{
-    font-family: "Bebas Neue", sans-serif;
+    font-family: "NASA", sans-serif;
     text-transform: uppercase;
     color: #fc3d21;
 }
 
-div,nav, footer{
-    z-index: 1;
-}
-
-canvas {
-    position: absolute;
-    display: flex;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-}
-
-nav {
+header {
     display: flex; 
     justify-content: space-between; 
     align-items: center;
@@ -38,11 +27,12 @@ nav {
     background: #0b3d91;
     opacity: 0.8; 
     border-radius: 10px;
+    border-style: 1em ridge #fc3d21;
     padding: 0.5em; 
     margin-top: 1em;
 }
 
-nav div{
+header div{
     width: 5em;
     height: 5em;
     display: flex;
@@ -51,78 +41,32 @@ nav div{
     flex-shrink: 0;
 }
 
-nav button {
+.menu-toggle {
     position: relative;
     justify-content: center;
     align-items: center;
-    background-color: white;
-    font-weight: bold;
-    color: black;
-    border: 2px solid #fc3d21;
+    background-image: url("../images/fondo7.jpg");
+    background-size: cover;
+    color: white;
     border-radius: 4px;
     width: 5em; 
     height: 2.5em;
     overflow: hidden;
-    transition: width 0.5s ease, height 0.5s ease, opacity 0.35s , background-color 0.35s ease, transform 0.35s ease, border-radius 0.5s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+    transition: width 0.25s ease, height 0.25s ease, opacity 0.35s , background-color 0.35s ease, transform 0.35s ease, border-radius 0.5s cubic-bezier(0.68, -0.55, 0.27, 1.55);
 }
 
-nav button span{
-    transition: opacity 0.6s ease;
+.menu-toggle span{
+    transition: opacity 0.15s ease;
 }
 
-nav button:hover{
+.menu-toggle:hover{
     width: 4em; 
     height: 4em;
     border-radius: 2em; 
-    border-color: #0b3d91;
-    background-image: url("../images/53852285870_a43ee453ca_6k.jpg");
+    background-image: url("../images/fondo2.jpg");
     background-size: cover;
 }
-
-nav button .rocket{
-    position: absolute;
-    width: 1em;
-    height: auto;
-    bottom: 20%;
-    left: 50%;
-    transform: translate(-50%, 50%) scale(0);
-    transition: transform 0.3 ease-in-out;
-}
-
-nav button:hover .rocket{
-    transform: translate(-50%, 50%) scale(1);
-}
-
-nav button:active .rocket{
-    animation: launch 1.2s ease-out forwards;
-}
-
-nav button:hover span{
-    opacity: 0;
-}
-
-nav button:active span{
-   opacity: 0;
-}
-
-@keyframes launch{
-    0%{
-        bottom: 20%;
-        opacity: 1;
-        transform: translate(-50%, 50%) scale(1);
-    }
-    50%{
-        bottom: 75%;
-        opacity: 0.8;
-        transform: translate(-50%, 0%) scale(1.25);
-    }
-    100%{
-        bottom: 150%;
-        opacity: 0;
-        transform: translate(-50%, -50%) scale(1.5);
-    }
-}
-nav #title {
+.title {
     flex: 1;
     text-align: center;
     color: #fc3d21;
@@ -131,53 +75,21 @@ nav #title {
     letter-spacing: 0.5em;
 }
 
-nav img {
+.logo {
     max-height: 2.5em;
-    width: auto; 
+    width: auto;
 }
 
 /*Page distribution & image caption animation*/
 
-#presentation{
+.presentation{
     display: flex;
     background-color: aliceblue;
     margin-top: 15%;
 }
 
-#text{
-    padding: 1%;
-    text-align: justify;
-    text-align-last: left;
-}
-
-#image-caption{
-    position: relative;
-    display: inline-block;
-    width: fit-content;
-    overflow: hidden;
-}
-#image-caption figcaption{
-    position: absolute;
-    bottom: -100%;
-    left: 0;
-    width: 100%;
-    background-color: rgba(50, 50, 50, 0.8);
-    color: white;
-    padding: 2.5%;
-    font-size: small;
-    text-align: justify;
-    text-align-last: left;
-    opacity: 0;
-    transform: translateY(100%);
-    transition: opacity 0.5s, transform 0.5s ease;
-}
-
-#image-caption:hover figcaption{
-    transform: translateY(0);
-    opacity: 1;
-}
-
-#cosmos1{
-    width: 100%;
-    height: 100%;
+/*Font call*/
+@font-face {
+    font-family: "NASA";
+    src: url("../fonts/Nasa.ttf");
 }
